Tue Sep  7 11:34:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/BiDirGIOP.cpp:
        * tao/IORManipulation/IORManip_Loader.cpp:
        * tao/PortableServer/RequestProcessingStrategyServantLocator.cpp:
        * tao/Strategies/SCIOP_Endpoint.cpp:
        * tao/Utils/Servant_Var.cpp:
          Fuzz fixes

Tue Sep  7 10:52:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * PROBLEM-REPORT-FORM:
        * VERSION:
          Updated support email addresses

        * examples/CSD_Strategy/ThreadPool2/FooServantList.h:
        * examples/CSD_Strategy/ThreadPool2/FooServantList.cpp:
          Use ACE_Atomic_Op instead of a mutex with a guard

        * examples/CSD_Strategy/ThreadPool5/FooServantList.h:
        * examples/CSD_Strategy/ThreadPool5/FooServantList.cpp:
          Use ACE_GUARD

        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.h:
        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
          Use ACE_GUARD

        * orbsvcs/Fault_Notifier/FT_Notifier_i.h:
          Removed not used members

        * orbsvcs/Fault_Notifier/FT_Notifier_i.cpp:
          Unicode fixes

        * orbsvcs/examples/Notify/Federation/Gate/Gate.h:
        * orbsvcs/examples/Notify/Federation/Gate/Gate.cpp:
          Use ACE_GUARD, removed commented out code

        * orbsvcs/examples/PSS/Server.idl:
        * orbsvcs/examples/PSS/Server_i.h:
        * orbsvcs/examples/PSS/Server_i.cpp:
        * orbsvcs/examples/PSS/Simple_Naming.idl:
        * orbsvcs/examples/PSS/Simple_Naming.cpp:
        * orbsvcs/examples/PSS/Simple_Naming_i.h:
        * orbsvcs/examples/PSS/client.cpp:
          Removed ACE_RCSID

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/AMI_Primary_Replication_Strategy.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/AMI_Replication_Strategy.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Basic_Replication_Strategy.cpp: