@@ -1,3 +1,8 @@
+Tue Sep  7 18:07:16 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * utils/logWalker/Log.cpp:
+          Added missing include
+
 Tue Sep  7 11:34:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/BiDir_GIOP/BiDirGIOP.cpp:
